// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-bwzfXH hWGVlc"
>
  <div
    className="sc-htpNat cLKiod"
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-bwzfXH hWGVlc"
>
  <div
    className="sc-htpNat cLKiod"
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="sc-bdVaJa qHGnQ sc-bwzfXH hWGVlc custom__class"
>
  <div
    className="sc-htpNat iNSoUc"
  />
</div>
`;
